styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.container {
    position:relative;
    background: linear-gradient(#87CEEB, #E0F6FF);
    border-bottom: 7px solid rgb(35, 160,35);
    width: 80%;
    height: 500px;
    margin: 0 auto;
    overflow:hidden;
}

.gameover {
    display: none;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.gameover-igm {
    position: absolute;
}

.clouds {
    margin-top: 30px;
    position: absolute;
    width: 400px;
    animation: clouds-animation 20s infinite linear;
}

.pipe {
    position:absolute;
    bottom: 0;
    width: 80px;
    height: 80px;
    animation: pipe-animation 2500ms infinite linear;
}

.mario {
    position:absolute;
    bottom: 0px;
    width: 120px;
}

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    margin-top: 75px;
}

button {
    border: none;
}

.button-image {
    width: 120px;
    cursor: pointer;
}

.button-image:hover {
    opacity: 0.7;
}

.jump {
    animation: mario-jump 700ms ease-out;
}

@keyframes pipe-animation {
    from {
        right: -120px;
    }

    to {
        right: 100%;
    }
}

@keyframes mario-jump {
    0% {
        bottom: 0;
    }

    35% {
        bottom: 180px;
    }

    50% {
        bottom: 180px;
    }

    60% {
        bottom: 180px;
    }

    100% {
        bottom: 0px;
    }
}

@keyframes clouds-animation {
    from {
        right: -120px;
    }

    to {
        right: 100%;
    }
}

